# common/response/problem.go
@@ -3,11 +3,15 @@ package response
 import "github.com/Axope/JOJ/internal/model"
 
 type SimpleProblem struct {
-	PID   string `json:"pid" bson:"_id"`
-	Title string `json:"title"`
+	PID         string   `json:"pid" bson:"_id"`
+	Title       string   `json:"title"`
+	TimeLimit   int64    `json:"timeLimit"`
+	MemoryLimit int64    `json:"memoryLimit"`
+	Tags        []string `json:"tags"`
 }
 type GetProblemListResponse struct {
 	Problems []SimpleProblem `json:"problems"`
+	Total    int64           `json:"total"`
 }
 
 type GetProblemResponse struct {
@@ -22,4 +26,8 @@ type CreateProblemResponse struct {
 type UploadDatasResponse struct {
 	Success bool   `json:"success"`
 	Msg     string `json:"message"`
+}
+
+type GetTagsResponse struct {
+	Tags []string `json:"tags"`
 }
