# docs/swagger.json
@@ -340,8 +340,23 @@
                         "in": "formData"
                     },
                     {
+                        "type": "string",
+                        "name": "inputFormat",
+                        "in": "formData"
+                    },
+                    {
                         "type": "integer",
                         "name": "memoryLimit",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "name": "outputFormat",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "name": "tagsJson",
                         "in": "formData"
                     },
                     {
@@ -419,6 +434,33 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/response.GetProblemListResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/problem/getTags": {
+            "get": {
+                "tags": [
+                    "Problem"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.GetTagsResponse"
                                         }
                                     }
                                 }
@@ -800,8 +842,14 @@
                 "description": {
                     "type": "string"
                 },
+                "inputFormat": {
+                    "type": "string"
+                },
                 "memoryLimit": {
                     "type": "integer"
+                },
+                "outputFormat": {
+                    "type": "string"
                 },
                 "pid": {
                     "type": "string"
@@ -870,6 +918,12 @@
             "properties": {
                 "cid": {
                     "type": "string"
+                },
+                "executeMemory": {
+                    "type": "integer"
+                },
+                "executeTime": {
+                    "type": "integer"
                 },
                 "lang": {
                     "$ref": "#/definitions/model.LangSet"
@@ -1025,6 +1079,9 @@
                     "items": {
                         "$ref": "#/definitions/response.SimpleProblem"
                     }
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
@@ -1063,6 +1120,17 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/model.Submission"
+                    }
+                }
+            }
+        },
+        "response.GetTagsResponse": {
+            "type": "object",
+            "properties": {
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
                     }
                 }
             }
@@ -1144,8 +1212,20 @@
         "response.SimpleProblem": {
             "type": "object",
             "properties": {
+                "memoryLimit": {
+                    "type": "integer"
+                },
                 "pid": {
                     "type": "string"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "timeLimit": {
+                    "type": "integer"
                 },
                 "title": {
                     "type": "string"
